updated workflow with adding multiple accounts
Signed-off-by: AnkitaTamta <118276846+AnkitaTamta@users.noreply.github.com>

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -73,5 +73,9 @@ jobs:
     - name: Deploy stackset in Target Account
       id: deploy_stackset
       run: |
-        aws cloudformation create-stack-instances --stack-set-name "DemoVPC" --accounts "${{ github.event.inputs.account_id }}" --regions "${{ github.event.inputs.region }}"
+        aws cloudformation create-stack-instances \
+        --stack-set-name DemoVPC \
+        --accounts ${{ github.event.inputs.account_id }} \
+        --regions ${{ github.event.inputs.region }} \
+        --operation-preferences FailureToleranceCount=7
         
